; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page7c.c_makePage7c.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page7c.c_makePage7c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@handlerDraw = common dso_local global i32 0, align 4
@handler = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@handlerMouseEvent = common dso_local global i32 0, align 4
@handlerMouseCrossed = common dso_local global i32 0, align 4
@handlerDragBroken = common dso_local global i32 0, align 4
@handlerKeyEvent = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Scrolling Drawing Test\00", align 1
@areaSize = common dso_local global i32 0, align 4
@area = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @makePage7c() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @handlerDraw, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @handler, i32 0, i32 0, i32 4), align 4
  %3 = load i32, i32* @handlerMouseEvent, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @handler, i32 0, i32 0, i32 3), align 4
  %4 = load i32, i32* @handlerMouseCrossed, align 4
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @handler, i32 0, i32 0, i32 2), align 4
  %5 = load i32, i32* @handlerDragBroken, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @handler, i32 0, i32 0, i32 1), align 4
  %6 = load i32, i32* @handlerKeyEvent, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @handler, i32 0, i32 0, i32 0), align 4
  %7 = call i32* @newGroup(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %1, align 8
  %8 = load i32, i32* @areaSize, align 4
  %9 = load i32, i32* @areaSize, align 4
  %10 = call i32 @uiNewScrollingArea(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @handler, i32 0, i32 0, i32 0), i32 %8, i32 %9)
  store i32 %10, i32* @area, align 4
  %11 = load i32*, i32** %1, align 8
  %12 = load i32, i32* @area, align 4
  %13 = call i32 @uiControl(i32 %12)
  %14 = call i32 @uiGroupSetChild(i32* %11, i32 %13)
  %15 = load i32*, i32** %1, align 8
  ret i32* %15
}

declare dso_local i32* @newGroup(i8*) #1

declare dso_local i32 @uiNewScrollingArea(i32*, i32, i32) #1

declare dso_local i32 @uiGroupSetChild(i32*, i32) #1

declare dso_local i32 @uiControl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
